fixed navigation to collapse

--- a/website/style/form.css
+++ b/website/style/form.css
@@ -1,6 +1,6 @@
 /* style for form */
 
-form{
+aboutForm{
     border: 1px solid rgb(180, 176, 176);
     border-radius: 10px;
     padding: 15px;
